--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ requires-python = ">=3.8"
 
 # Update the urls once the hosting is set up.
 #[project.urls]
-#"Source" = "https://github.com/<username>/montecarlo/"
+#"Source" = "https://github.com/firt27/montecarlo"
 #"Documentation" = "https://montecarlo.readthedocs.io/"
 
 [project.optional-dependencies]
