updating files so ReadTheDocs build succeeds

--- a/docs/requirements.yaml
+++ b/docs/requirements.yaml
@@ -5,8 +5,9 @@ dependencies:
   - python
   - pip
 
+  - numpy
+  - matplotlib
 
-
-    # Pip-only installs
-  #- pip:
+  - pip:
+        - sphinx-rtd-theme
 
