--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,7 +3,9 @@
 version: 2
 
 build:
-  image: latest
+  os: ubuntu-22.04
+  tools:
+    python: "miniconda3-4.7"
 
 python:
   version: 3.8
@@ -11,5 +13,8 @@ python:
     - method: pip
       path: .
 
+sphinx:
+  configuration: docs/conf.py
+
 conda:
-  environment: docs/requirements.yaml
+  environment: ./docs/requirements.yaml
