--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -9,7 +9,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "miniconda/conda3-4.7"
+    python: "miniconda3-4.7"
     # You can also specify other tool versions:
     # nodejs: "19"
     # rust: "1.64"
