--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -64,7 +64,7 @@ jobs:
         flags: unittests
         name: codecov-${{ matrix.os }}-py${{ matrix.python-version }}
     
-    - name: Upload coverage reports to Codecov
+    - name: Uploading coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
